# voiceintelliapp

./: .env.example  .gitignore  LICENSE  PRIVACY.md  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
.auto-claude/worktrees/tasks/011-setup-js/: package.json
scripts/: bump-version.js  prepare.js  setup-utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/history/: page.tsx
src/app/settings/: page.tsx
src/components/: EnrichmentModeSelector.tsx  HistoryView.tsx  MicrophoneSelector.tsx  OutputRouter.tsx  RecordingOverlay.tsx  SettingsPanel.tsx  SetupWizard.tsx  index.ts
src/hooks/: index.ts  useHotkey.ts  useLLM.ts  useRecording.ts  useSettings.ts
src/lib/: api.ts  config.ts  notion.ts  pdf.ts
src/providers/: ollama.ts  openai.ts  openrouter.ts
src/services/: enrichment.ts  llm-router.ts  stt.ts
src/tests/: setup.ts
src/tests/e2e/: history-page.spec.ts  main-page.spec.ts  navigation.spec.ts  settings-page.spec.ts
src/tests/unit/: api.test.ts  enrichment.test.ts  llm-router.test.ts  notion.test.ts  ollama-provider.test.ts  pdf.test.ts
src/types/: index.ts  llm.ts
